# megu-cpp

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
example/lang/: CMakeLists.txt
example/lang/lisp/: CMakeLists.txt
example/lang/lisp/include/lisp/: CMakeLists.txt
example/lang/lisp/include/lisp/LispAST/: CMakeLists.txt  LispASTDialect.h  LispASTDialect.td  LispASTOps.h  LispASTOps.td  LispASTType.h  LispASTType.td
example/lang/lisp/include/lisp/Pass/: CMakeLists.txt
example/lang/lisp/include/lisp/Pass/ConvToLispAST/: .h  .td
example/lang/lisp/lib/: CMakeLists.txt
example/lang/lisp/lib/LispAST/: CMakeLists.txt  LispASTDialect.cpp  LispASTOps.cpp  LispASTType.cpp
example/lang/lisp/lib/Pass/: CMakeLists.txt
example/lang/lisp/lib/Pass/ConvToLispAST/: AST.h  CMakeLists.txt  ConvToLispAST.cpp  Parser.cpp
example/lang/lisp/plugin/: CMakeLists.txt  LispASTPlugin.cpp
include/MokeyToken/: CMakeLists.txt  MokeyTokenDialect.h  MokeyTokenOps.h  MokeyTokenOps.td
lib/MokeyToken/: CMakeLists.txt  MokeyTokenDialect.cpp  MokeyTokenOps.cpp
mevil/: CMakeLists.txt  main.cpp
mevil/src/: buildCtx.h  buildEnv.h  identMap.h  main.cpp  runPython.cpp  runPython.h
mevil/src/constMLIR/: constMLIR.cpp  constMLIR.h
mevil/src/loadlib/: dialect.cpp  dialect.h  load_test.cpp  load_test.h
mevil/src/util/: util.cpp  util.h
mokey/: CMakeLists.txt
mokey/include/: CMakeLists.txt
mokey/include/mokey/MokeyToken/: MokeyTokenDialect.h  MokeyTokenDialect.td  MokeyTokenOps.h  MokeyTokenOps.td
mokey/lib/MokeyToken/: CMakeLists.txt  MokeyTokenDialect.cpp  MokeyTokenOps.cpp
mokey/plugin/: CMakeLists.txt
mokey/plugin/MokeyToken/: CMakeLists.txt  MokeyTokenPlugin.cpp
tools/: loadlisp.sh
